[package]
name = "Database-Final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-service = "2.0.2"
tokio = "1"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-actix", "runtime-actix-native-tls"] }
